test(consensus): live jraft-vs-ratis comparison via test-cycle.sh
Add COMPOSE_FILES env hook to test-cycle.sh (default unchanged → jraft run identical
to v2; ratis run injects docker-compose.ratis.yml). Engine is the sole variable.

Results (10 VU, 2m, same v3 image, same flush/stack/k6/recon):
- SOFAJRaft: p50 3.1ms / p95 6.22ms, 22317 iter, 0% fail — 229 pass/0 fail, PASSED
- Apache Ratis: p50 5.5ms / p95 10.06ms, 21207 iter, 0% fail — 226 pass/0 fail, PASSED
- Both: 0 balance mismatch, 0 cross-node divergence, Raft index identical across 3 nodes.
- Ratis ~60-77% higher posting latency (embedded gRPC submit hop), ~5% lower throughput.

Failover + OOM DR not run this round (test-cycle.sh does not kill/throttle); harness ready.
Fill docs/RAFT-COMPARISON-2026-06-08.md sections 2 + 5 with real numbers and POC verdict.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>